# doc-lib-mcp

./: .env  .env.example  .gitignore  README.md  gemma3-fintuning.md  pyproject.toml  requirements.txt
src/doc_lib_mcp/: chunkers.py  server.py
